manifests/webhook-deployment-local.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: pvc-timing-webhook-local
webhooks:
- name: pvc-timing-webhook-local.storage.example.com
  clientConfig:
    url: https://192.168.5.200:8080/validate
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQvVENDQXVXZ0F3SUJBZ0lVRGxqWlArVWN1M3ROQlhjK1NmcDJVWUFxa2Qwd0RRWUpLb1pJaHZjTkFRRUwKQlFBd05ERXlNREFHQTFVRUF3d3BjSFpqTFhScGJXbHVaeTEzWldKb2IyOXJMbkIyWXkxMGFXMXBibWN0ZDJWaQphRzl2YXk1emRtTXdIaGNOTWpVd09ESTFNRGt5TnpJeldoY05Nall3T0RJMU1Ea3lOekl6V2pBME1USXdNQVlEClZRUUREQ2x3ZG1NdGRHbHRhVzVuTFhkbFltaHZiMnN1Y0haakxYUnBiV2x1WnkxM1pXSm9iMjlyTG5OMll6Q0MKQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFKcklKNDFzTW5VSWxXMzJXRWlDYjVrOQo3MHIrbllydXVDYk [...]
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["*"]
    resources: ["persistentvolumeclaims"]
    scope: "Namespaced"
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 10
  failurePolicy: Ignore
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pvc-timing-webhook-local
webhooks:
- name: pvc-timing-webhook-local.storage.example.com
  clientConfig:
    url: https://192.168.5.200:8080/mutate
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQvVENDQXVXZ0F3SUJBZ0lVRGxqWlArVWN1M3ROQlhjK1NmcDJVWUFxa2Qwd0RRWUpLb1pJaHZjTkFRRUwKQlFBd05ERXlNREFHQTFVRUF3d3BjSFpqTFhScGJXbHVaeTEzWldKb2IyOXJMbkIyWXkxMGFXMXBibWN0ZDJWaQphRzl2YXk1emRtTXdIaGNOTWpVd09ESTFNRGt5TnpJeldoY05Nall3T0RJMU1Ea3lOekl6V2pBME1USXdNQVlEClZRUUREQ2x3ZG1NdGRHbHRhVzVuTFhkbFltaHZiMnN1Y0haakxYUnBiV2x1WnkxM1pXSm9iMjlyTG5OMll6Q0MKQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFKcklKNDFzTW5VSWxXMzJXRWlDYjVrOQo3MHIrbllydXVDYk [...]
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["*"]
    resources: ["persistentvolumeclaims"]
    scope: "Namespaced"
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 10
  failurePolicy: Ignore
